--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ nav{
   max-width:400px;
 }
 
-
 .presentation-text{
   font-size: 0.75rem;
   text-align: justify;
@@ -52,6 +51,35 @@ nav{
 .presentation-text::first-letter{
   color: green;
   font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-family: cursive;
+}
+
+/* style de la section contact */
+
+.contact{
+  font-size: 0.65rem;
+}
+
+/* style de l'espace "partenaires" */
+
+aside{
+  height: 140px;
+  background-color: rgb(193, 241, 193);
+  /* border: 1px solid green; */
+}
+
+aside>h2{
+  font-size: 1rem;
+}
+
+.logo-partenaires>figure>img{
+  max-width: 100px;
+  height: 40px;
+}
+
+.logo-partenaires>figure>figcaption{
+  font-size: 0.5rem;
+  text-align: justify;
+  margin-top: 2px;
 }
